bugfix on label/input alignment, a bit of style

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,8 @@
  *= require_tree .
  *= require_self
  */
+
+div.content {
+    width: 80%;
+    margin: 0 auto;
+}
